style.css
:root {
	--black: rgb(29, 32, 33);
	--darkRed: rgba(204, 35, 29, 0.85);
	--darkBlue: rgba(69, 133, 136, 0.85);
	--darkYellow: rgba(215, 154, 33, 0.85);
	--white: rgb(235, 219, 178);

	--darkGray: #928374;
	--lightGray: #a89984;
	--darkPurple: #b16286;
	--darkGreen: #98971a;
	--darkTeal: #689d6a;
	--lightRed: #fb4934;
	--lightPurple: #d3869b;
	--lightBlue: #83a598;
	--lightYellow: #fabd2f;
	--lightGreen: #b8bb26;
	--lightTeal: #8ec07c;
}

* {
	box-sizing: border-box;

	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
	font-weight: 400;
}

html {
	height: 100%;
	width: 100%;

	scrollbar-width: none;
}

body {
	height: 100%;
	width: 100%;

	padding: 0px;
	margin: 0px;

	background-color: var(--white);
	color: rgb(29, 32, 33);
}

.flex {
	display: flex;
}

.button-1,
.button-2,
.button-3,
.button-4,
.button-5,
.button-6,
.button-7,
.button-8,
.button-9,
.button-10,
.button-11 {
	display: flex;
	justify-content: space-evenly;
	align-items: flex-start;
}

a {
	color: rgb(29, 32, 33);
	text-decoration: none;
}
a:hover {
	color: rgb(235, 219, 178);
}
ul {
	list-style: none;
}

h1 {
	font-size: calc(1.1vw + 1.1vh);
	font-weight: 700;
	margin: 0px;
	margin-top: 0.4em;
	padding: 0px;
}

h2 {
	font-size: calc(0.8vw + 0.8vh);
	margin: 0px;
	margin-bottom: 0.2em;
	padding: 0px;
}

.button-3,
.button-8 {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
}

.button-3 img {
	width: 13vw;
	height: 13vh;
}

.button-8 img {
	width: 13vw;
	height: 13vh;
}

/*  ROW 1 */

.button-1:hover {
	background-color: rgba(69, 133, 136, 0.95);
}

.button-2:hover {
	background-color: rgba(204, 35, 29, 0.95);
}

.button-3:hover {
	background-color: rgba(215, 154, 33, 0.95);
}

.button-4:hover {
	background-color: rgba(204, 35, 29, 0.95);
}

/*  ROW 2 */

.button-5:hover {
	background-color: rgba(215, 154, 33, 0.95);
}

.button-6:hover {
	background-color: rgba(69, 133, 136, 0.95);
}

body:has(.button-6:hover) .button-6 {
	background-color: rgba(69, 133, 136, 0.95);
}

.button-7:hover {
	background-color: rgba(69, 133, 136, 0.95);
}

.button-8:hover {
	background-color: rgba(215, 154, 33, 0.95);
}

/*  ROW 3 */

.button-9:hover {
	background-color: rgba(69, 133, 136, 0.95);
}

.button-10:hover {
	background-color: rgba(204, 35, 29, 0.95);
}

.button-11:hover {
	background-color: rgba(204, 35, 29, 0.95);
}

/* timing for transition to default */

.button-1,
.button-2,
.button-3,
.button-4,
.button-5,
.button-6,
.button-7,
.button-8,
.button-9,
.button-10,
.button-11 {
	transition: 1s;
	transition-timing-function: ease;
	opacity: 1;
}

/* timing for transition to hover */

img:hover {
	transition: 0.15s;
	transition-timing-function: ease;
	border: 0.4em solid rgb(235, 219, 178);
}

.button-1:hover,
.button-2:hover,
.button-3:hover,
.button-4:hover,
.button-6:hover,
body:has(.button-6:hover) .button-6,
.button-7:hover,
.button-8:hover,
.button-9:hover,
.button-10:hover,
.button-11:hover {
	transition: 0.3s;
	transition-timing-function: ease;

	h1 {
		color: rgb(235, 219, 178);
		text-shadow: 1px 1px 1px black;
	}
}

/* site startup animation */

.black,
.yellow,
.blue,
.red,
.lines {
	animation: fade1 8.8s ease-in-out;
	animation-iteration-count: 1;
}
@keyframes fade1 {
	0% {
		opacity: 0;
	}
	52% {
		opacity: 0;
	}
	65% {
		opacity: 1;
	}
}
.canvas-texture {
	animation: fade2 8s ease-in-out;
	animation-iteration-count: 1;
}

@keyframes fade2 {
	0% {
		opacity: 0;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 5%;
	}
}
.cracked-texture {
	animation: fade3 8s ease-in-out;
	animation-iteration-count: 1;
}

@keyframes fade3 {
	0% {
		opacity: 0;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 15%;
	}
}

.button-1,
.button-2,
.button-3,
.button-4,
.button-5,
.button-6,
.button-7,
.button-8,
.button-9,
.button-10,
.button-11 {
	animation: sweep 5s ease-in-out;
	animation-iteration-count: 1;
}

@keyframes sweep {
	0% {
		transform: translate(-1900px, -1900px) scale(10) rotate(0deg);
		opacity: 0;
		pointer-events: none;
	}
	20% {
		transform: translate(0px, 0px) scale(4) rotate(-90deg);
		opacity: 1;
		pointer-events: none;
	}

	45% {
		transform: translate(1000px, 0px) scale(30) rotate(-90deg);
		pointer-events: none;
	}

	60% {
		transform: translate(-1000px, 0px) scale(40) rotate(-90deg);
		pointer-events: none;
	}
	70% {
	}

	80% {
		transform: translate(15px, 0px) scale(0.5) rotate(-100deg);
		pointer-events: none;
	}
	90% {
		transform: translate(0px, 0px) scale(1.5) rotate(380deg);
		pointer-events: none;
	}
	100% {
		transform: translate(0px, 0px) scale(1.01) rotate(360deg);
		pointer-events: none;
		pointer-events: all;
	}
}

.white {
	background-color: var(--white);
}

.black {
	background-color: var(--black);
}

.blue {
	background-color: var(--darkBlue);
}

.red {
	background-color: var(--darkRed);
}

.yellow {
	background-color: var(--darkYellow);
}

